--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,5 +13,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src", "images.d.ts"]
+  "include": ["src", "media.d.ts"]
 }
